--- a/src/components/Items.css
+++ b/src/components/Items.css
@@ -35,3 +35,10 @@
 #price {
   font-size: 24px;
 }
+
+.returns-container {
+  padding: 1.5em;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
